name:                hangman
version:             0.1.0.0
synopsis:            playing hangman
-- description:
homepage:            https://github.com/dan1229/haskell-hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel Nazarian
maintainer:          danielnazarian@outlook.com
copyright:           2022 Daniel Nazarian
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
  default-language:    Haskell2010
